--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,35 @@
-<footer class="footer">我是 footer</footer>
+<footer class="footer bg-primary pt-16 pb-8">
+  <div class="container">
+    <div class="footer-header mb-6">
+      <nav class="footer-nav">
+        <a href="#" class="text-white mr-12">首頁</a>
+        <a href="#" class="text-white mr-12">系列鏡框</a>
+        <a href="#" class="text-white mr-12">系列鏡框</a>
+        <a href="#" class="text-white mr-12">部落格</a>
+        <a href="#" class="text-white">常見問題</a>
+      </nav>
+      <ul class="icons-list">
+        <li><img class="icon mr-8" src="../assets/images/ic-social-fb.png" alt="facebook"></li>
+        <li><img class="icon mr-8" src="../assets/images/ic_social_ig.png" alt="instagram"></li>
+        <li><img class="icon" src="../assets/images/ic_social_line.png" alt="line"></li>
+      </ul>
+    </div>
+    <address class="footer-main fz-3 pb-8 mb-8">
+      <a class="text-white contact-link mb-2" href="tel:+0800-000-00">
+        <span class="material-icons-outlined fz-3 mr-2">call</span>
+        <span>0800-000-00</span>
+      </a>
+      <a class="text-white contact-link" href="mailto:glasses@business.com">
+        <span class="material-icons-outlined fz-3 mr-2">email</span>
+        <span>glasses@business.com</span>
+      </a>
+    </address>
+    <div class="footer-footer text-white fz-8">
+      <p>Copyright © 2020 Glasses.All rights reserved.</p>
+      <div class="policy-group">
+        <p class="mr-12">隱私權政策</p>
+        <p>服務條款</p>
+      </div>
+    </div>
+  </div>
+</footer>
