--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,4 +1,11 @@
-.header{
-  background: #69F0AE;
-  font-size: 64px;
-}
+.header {
+  .logo {
+    width: 80px;
+    height: 48px;
+  }
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+} 
