--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer bg-primary pt-16 pb-8">
+<footer class="footer bg-primary pt-12 pb-8">
   <div class="container">
     <div class="footer-header mb-6">
       <nav class="footer-nav">
@@ -9,9 +9,9 @@
         <a href="#" class="text-white">常見問題</a>
       </nav>
       <ul class="icons-list">
-        <li><img class="icon mr-8" src="../assets/images/ic-social-fb.png" alt="facebook"></li>
-        <li><img class="icon mr-8" src="../assets/images/ic_social_ig.png" alt="instagram"></li>
-        <li><img class="icon" src="../assets/images/ic_social_line.png" alt="line"></li>
+        <li><a href="#"><img class="icon mr-8" src="../assets/images/ic-social-fb.png" alt="facebook"></a></li>
+        <li><a href="#"><img class="icon mr-8" src="../assets/images/ic_social_ig.png" alt="instagram"></a></li>
+        <li><a href="#"><img class="icon" src="../assets/images/ic_social_line.png" alt="line"></a></li>
       </ul>
     </div>
     <address class="footer-main fz-3 pb-8 mb-8">
