--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -15,6 +15,7 @@
     border-bottom: 1px solid $white;
     .contact-link {
       display: flex;
+      align-items: center;
     }
   }
   .footer-footer {
