--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -28,3 +28,109 @@
     }
   }
 }
+
+.category-section {
+  .section-title {
+    text-align: center;
+  }
+  .category-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .category-item {
+    font-style: italic;
+    text-align: center;
+    width: 32%;
+    img {
+      height: 416px;
+    }
+  }
+}
+
+.collaborative-section {
+  .section-title {
+    text-align: center;
+  }
+  background: url(../images/index-bg.png) no-repeat center;
+  background-size: cover;
+  .collaborative-list {
+    display: flex;
+    .collaborative-item {
+      width: 50%;
+      img {
+        height: 240px;
+      }
+      h4 {
+        font-style: italic;
+        text-align: center;
+        &:first-of-type {
+          border-right: 1px solid $red_300  ;
+        }
+      }
+    }
+  }
+}
+
+.recommended-section {
+  .section-title {
+    text-align: center;
+  }
+  .recommended-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .recommended-item {
+      display: flex;
+      flex-direction: column;
+      width: 23.61%;
+      border: 1px solid $gray_200;
+      box-shadow: 0px 2px 6px $black_200;
+      img {
+        height: 306px;
+      }
+    }
+    .recommended-item-main {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+    }
+    .recommended-item-text {
+      flex-grow: 1;
+      min-height: 112px;
+    }
+  }
+}
+
+.contact-section {
+  .section-title {
+    text-align: center;
+  }
+  .form-container {
+    width: 636px;
+    margin: 0 auto;
+    .input-group {
+      label {
+        display: block;
+      }
+      input, textarea {
+        width: 100%;
+      }
+    }
+    .policy-group {
+      display: flex;
+      align-items: end;
+      input[type="checkbox"] {
+        width: 20px;
+        height: 20px;
+      }
+    }
+    .submit-btn {
+      display: block;
+      max-width: 416px;
+      width: 100%;
+      border: none;
+      margin: 0 auto;
+    }
+  }
+}
