--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -2,33 +2,33 @@
   <div class="container">
     <div class="footer-header mb-6">
       <nav class="footer-nav">
-        <a href="#" class="text-white mr-12">首頁</a>
+        <a href="/week3-4/pages/index.html" class="text-white mr-12">首頁</a>
         <a href="#" class="text-white mr-12">系列鏡框</a>
         <a href="#" class="text-white mr-12">系列鏡框</a>
         <a href="#" class="text-white mr-12">部落格</a>
         <a href="#" class="text-white">常見問題</a>
       </nav>
       <ul class="icons-list">
-        <li><a href="#"><img class="icon mr-8" src="../assets/images/ic-social-fb.png" alt="facebook"></a></li>
-        <li><a href="#"><img class="icon mr-8" src="../assets/images/ic_social_ig.png" alt="instagram"></a></li>
-        <li><a href="#"><img class="icon" src="../assets/images/ic_social_line.png" alt="line"></a></li>
+        <li><a href="#"><img class="icon mr-8" src="../../assets/images/ic-social-fb.png" alt="facebook"></a></li>
+        <li><a href="#"><img class="icon mr-8" src="../../assets/images/ic_social_ig.png" alt="instagram"></a></li>
+        <li><a href="#"><img class="icon" src="../../assets/images/ic_social_line.png" alt="line"></a></li>
       </ul>
     </div>
-    <address class="footer-main fz-3 pb-8 mb-8">
+    <address class="footer-main fz-36 pb-8 mb-8">
       <a class="text-white contact-link mb-2" href="tel:+0800-000-00">
-        <span class="material-icons-outlined fz-3 mr-2">call</span>
+        <span class="material-icons-outlined fz-36 mr-2">call</span>
         <span>0800-000-00</span>
       </a>
       <a class="text-white contact-link" href="mailto:glasses@business.com">
-        <span class="material-icons-outlined fz-3 mr-2">email</span>
+        <span class="material-icons-outlined fz-36 mr-2">email</span>
         <span>glasses@business.com</span>
       </a>
     </address>
-    <div class="footer-footer text-white fz-8">
+    <div class="footer-footer text-white fz-14">
       <p>Copyright © 2020 Glasses.All rights reserved.</p>
       <div class="policy-group">
-        <p class="mr-12">隱私權政策</p>
-        <p>服務條款</p>
+        <a href="#" class="text-white mr-12">隱私權政策</a>
+        <a href="#" class="text-white">服務條款</a>
       </div>
     </div>
   </div>
