--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,13 +1,13 @@
 <header class="header bg-primary py-4">
   <div class="header-container container">
-    <a href="index.html">
-      <img class="logo" src="../assets/images/logo-white.png" alt="logo">
+    <a href="/week3-4/pages/index.html">
+      <img class="logo" src="../../assets/images/logo-white.png" alt="logo">
     </a>
     <nav class="header-nav">
-      <a href="#" class="text-white fz-5 mr-16">系列鏡框</a>
-      <a href="#" class="text-white fz-5 mr-16">門市據點</a>
-      <a href="#" class="text-white fz-5 mr-16">部落格</a>
-      <a href="#" class="text-white fz-5">常見問題</a>
+      <a href="#" class="text-white fz-20 mr-16">系列鏡框</a>
+      <a href="#" class="text-white fz-20 mr-16">門市據點</a>
+      <a href="#" class="text-white fz-20 mr-16">部落格</a>
+      <a href="#" class="text-white fz-20">常見問題</a>
     </nav>
   </div>
 </header>
