--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -10,8 +10,10 @@
 @import './components/imgs-banner.scss';
 @import './components/pagination.scss';
 @import './components/page-title.scss';
+@import './components/locations-list.scss';
 
 // page
 @import './pages/index.scss';
 @import './pages/optical.scss';
 @import './pages/sunglasses.scss';
+@import './pages/locations.scss';
