拆分 component: select-group

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -11,9 +11,9 @@
 @import './components/pagination.scss';
 @import './components/page-title.scss';
 @import './components/locations-list.scss';
+@import './components/select-group.scss';
 
 // page
 @import './pages/index.scss';
 @import './pages/optical.scss';
 @import './pages/sunglasses.scss';
-@import './pages/locations.scss';
