--- a/components/select-group.ejs
+++ b/components/select-group.ejs
@@ -1,8 +1,8 @@
 <div class="select-group">
-  <h3 class="fz-24 mr-4">選擇地區</h3>
-  <select name="city" class="fz-18 text-gray_500 px-3 py-6px">
-    <option value="台北市">台北市</option>
-    <option value="台中市">台中市</option>
-    <option value="高雄市">高雄市</option>
+  <h3 class="fz-24 mr-4"><%= title  %></h3>
+  <select name="<%= title %>" class="fz-18 text-gray_500 px-3 py-6px">
+    <% options.map(option => { %>
+      <option value="<%= option %>"><%= option %></option>
+    <% }) %>
   </select>
 </div>
