--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -17,3 +17,4 @@
 @import './pages/index.scss';
 @import './pages/optical.scss';
 @import './pages/sunglasses.scss';
+@import './pages/location.scss';
