--- a/assets/scss/pages/_location.scss
+++ b/assets/scss/pages/_location.scss
@@ -1,3 +1,35 @@
 .location-wrap {
-  
+  .location-main {
+    display: flex;
+    flex-wrap: wrap;
+    .location-card {
+      width: 40.586%;
+      .location-card-img {
+        width: 100%;
+        height: 224px;
+      }
+      .location-card-title, .location-card-main {
+        border: 1px solid $gray_600;
+      }
+      .location-card-phone {
+        display: flex;
+        align-items: center;
+      }
+      .location-card-text-group {
+        display: flex;
+      }
+      .location-detail-link {
+        display: block;
+        width: 100%;
+        text-align: center;
+      }
+    }
+    .google-map {
+      flex-grow: 1;
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 }
