--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -18,3 +18,4 @@
 @import './pages/optical.scss';
 @import './pages/sunglasses.scss';
 @import './pages/location.scss';
+@import './pages/questions.scss';
