--- a/components/locations-list.ejs
+++ b/components/locations-list.ejs
@@ -12,7 +12,7 @@
           <span class="material-icons-outlined mr-2">schedule</span>
           <span><%= location.time -%></span>
         </p>
-        <p class="location-item-text-group mb-4">
+        <p class="location-item-text-group">
           <span class="material-icons-outlined mr-2">location_on</span>
           <span><%= location.address -%></span>
         </p>
