--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -19,3 +19,4 @@
 @import './pages/sunglasses.scss';
 @import './pages/location.scss';
 @import './pages/questions.scss';
+@import './pages/blog.scss';
