--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -12,6 +12,7 @@
 @import './components/page-title.scss';
 @import './components/locations-list.scss';
 @import './components/select-group.scss';
+@import './components/article-nav.scss';
 
 // page
 @import './pages/index.scss';
@@ -20,3 +21,4 @@
 @import './pages/location.scss';
 @import './pages/questions.scss';
 @import './pages/blog.scss';
+@import './pages/article.scss';
