--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -25,4 +25,15 @@
       display: flex;
     }
   }
+  .footer-nav {
+    a {
+      transition: filter .1s ease-in;
+      &:hover {
+        filter: brightness(0.8);
+      }
+      &:active {
+        filter: brightness(0.7);
+      }
+    }
+  }
 }
