--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -3,10 +3,10 @@
     <div class="footer-header mb-6">
       <nav class="footer-nav">
         <a href="/week3-4/pages/index.html" class="text-white mr-12">首頁</a>
-        <a href="#" class="text-white mr-12">系列鏡框</a>
-        <a href="#" class="text-white mr-12">系列鏡框</a>
-        <a href="#" class="text-white mr-12">部落格</a>
-        <a href="#" class="text-white">常見問題</a>
+        <a href="/week3-4/pages/products/optical.html" class="text-white mr-12">系列鏡框</a>
+        <a href="/week3-4/pages/locations.html" class="text-white mr-12">門市據點</a>
+        <a href="/week3-4/pages/blog.html" class="text-white mr-12">部落格</a>
+        <a href="/week3-4/pages/questions.html" class="text-white">常見問題</a>
       </nav>
       <ul class="icons-list">
         <li><a href="#"><img class="icon mr-8" src="../../assets/images/ic-social-fb.png" alt="facebook"></a></li>
