--- a/assets/scss/pages/_blog.scss
+++ b/assets/scss/pages/_blog.scss
@@ -15,6 +15,13 @@
       .article-link {
         text-transform: uppercase;
         text-align: right;
+        transition: filter .1s ease-in;
+        &:hover {
+          filter: brightness(1.8);
+        }
+        &:active {
+          filter: brightness(1.5);
+        }
       }
     }
   }
