--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -6,8 +6,8 @@
     <nav class="header-nav">
       <a href="/week3-4/pages/products/optical.html" class="text-white fz-20 mr-16">系列鏡框</a>
       <a href="/week3-4/pages/locations.html" class="text-white fz-20 mr-16">門市據點</a>
-      <a href="#" class="text-white fz-20 mr-16">部落格</a>
-      <a href="#" class="text-white fz-20">常見問題</a>
+      <a href="/week3-4/pages/blog.html" class="text-white fz-20 mr-16">部落格</a>
+      <a href="/week3-4/pages/questions.html" class="text-white fz-20">常見問題</a>
     </nav>
   </div>
 </header>
