--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -9,9 +9,9 @@
         <a href="/week3-4/pages/questions.html" class="text-white">常見問題</a>
       </nav>
       <ul class="icons-list">
-        <li><a href="#"><img class="icon mr-8" src="../../assets/images/ic-social-fb.png" alt="facebook"></a></li>
-        <li><a href="#"><img class="icon mr-8" src="../../assets/images/ic_social_ig.png" alt="instagram"></a></li>
-        <li><a href="#"><img class="icon" src="../../assets/images/ic_social_line.png" alt="line"></a></li>
+        <li class="icon-item mr-8"><a href="#"><img class="icon" src="../../assets/images/ic-social-fb.png" alt="facebook"></a></li>
+        <li class="icon-item mr-8"><a href="#"><img class="icon" src="../../assets/images/ic_social_ig.png" alt="instagram"></a></li>
+        <li class="icon-item"><a href="#"><img class="icon" src="../../assets/images/ic_social_line.png" alt="line"></a></li>
       </ul>
     </div>
     <address class="footer-main fz-36 pb-8 mb-8">
