--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,6 @@
 @import './reset.scss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import './grid.scss';
 @import './custom.scss';
 
 // components
