--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -6,9 +6,19 @@
   }
   .icons-list {
     display: flex;
+    .icon-item {
+      &:not(:last-child) {
+        margin-right: 16px;
+      }
+    }
     .icon {
       width: 48px;
       height: 48px;
+      @include tablet {
+        width: 40px;
+        height: 40px;
+        
+      }
     }
   }
   .footer-main {
@@ -23,6 +33,9 @@
     justify-content: space-between;
     .policy-group {
       display: flex;
+    }
+    @include tablet {
+      font-size: 16px;
     }
   }
   .footer-nav {
