切版 RWD(tablet 992px) /products/optical, /products/sunglasses

--- a/assets/scss/components/_products-nav.scss
+++ b/assets/scss/components/_products-nav.scss
@@ -1,4 +1,9 @@
 .optical-wrap, .sunglasses-wrap {
+  .products-nav-section {
+    @include tablet {
+      padding: 0;
+    }
+  }
   .products-nav {
     display: flex;
     justify-content: space-between;
