--- a/assets/scss/components/_products-list.scss
+++ b/assets/scss/components/_products-list.scss
@@ -1,7 +1,10 @@
 .products-list {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -24px;
+  margin: 0 -24px -80px 0;
+  @include tablet {
+    margin: 0 -24px -40px 0;
+  }
   .product-item {
     margin-right: 24px;
   }
@@ -13,6 +16,14 @@
   &.four-per-row {
     .product-item {
       width: calc(25% - 24px);
+    }
+  }
+  &.three-per-row, &.four-per-row {
+    .product-item {
+      @include tablet {
+        width: calc(50% - 24px);
+        margin-bottom: 40px;
+      }
     }
   }
   .product-item-img {
