--- a/assets/scss/pages/_optical.scss
+++ b/assets/scss/pages/_optical.scss
@@ -6,4 +6,15 @@
     display: flex;
     justify-content: center;
   }
+  .imgs-section {
+    @include tablet {
+      display: none;
+    }
+  }
+  .imgs-section-tablet {
+    display: none;
+    @include tablet {
+      display: block;
+    }   
+  }
 }
