切版 RWD(tablet 992px) /locations, /location

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -19,6 +19,7 @@
 @import './pages/index.scss';
 @import './pages/optical.scss';
 @import './pages/sunglasses.scss';
+@import './pages/locations.scss';
 @import './pages/location.scss';
 @import './pages/questions.scss';
 @import './pages/blog.scss';
