--- a/components/locations-list.ejs
+++ b/components/locations-list.ejs
@@ -1,6 +1,6 @@
 <ul class="locations-list">
   <% locations.map(location => { %>
-    <li class="location-item text-black_100 mb-12">
+    <li class="location-item text-black_100 mb-12 mr-6">
       <img class="location-item-img" src="<%= location.image -%>" alt="<%= location.title -%>">
       <h2 class="location-item-title fz-24 px-6 py-2"><%= location.title -%></h2>
       <div class="location-item-main fz-20 px-6 py-4">
