--- a/assets/scss/components/_locations-list.scss
+++ b/assets/scss/components/_locations-list.scss
@@ -1,10 +1,16 @@
 .locations-list {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -24px;
+  margin: 0 -24px -48px 0;
+  @include tablet {
+    margin: 0 -24px -24px 0;
+  }
   .location-item {
     width: calc(33.333% - 24px);
-    margin-right: 24px;
+    @include tablet {
+      width: calc(50% - 24px);
+      margin-bottom: 24px;
+    }
     .location-item-img {
       width: 100%;
       height: 224px;
