--- a/assets/scss/pages/_location.scss
+++ b/assets/scss/pages/_location.scss
@@ -1,12 +1,24 @@
 .location-wrap {
+  @include tablet {
+    padding-top: 80px;
+  }
   .location-main {
     display: flex;
     flex-wrap: wrap;
     .location-card {
       width: 40.586%;
+      @include tablet {
+        width: 100%;
+        display: flex;
+        margin: 0 0 24px;
+      }
       .location-card-img {
         width: 100%;
         height: 224px;
+        @include tablet {
+          width: 337px;
+          margin-right: 24px;
+        }
       }
       .location-card-title, .location-card-main {
         border: 1px solid $gray_600;
@@ -29,6 +41,9 @@
       iframe {
         width: 100%;
         height: 100%;
+        @include tablet {
+          height: 414px;
+        }
       }
     }
   }
