--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,5 @@
 @import './reset.scss';
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,900&display=swap');
 @import './grid.scss';
 @import './custom.scss';
 
