--- a/components/products-nav.ejs
+++ b/components/products-nav.ejs
@@ -1,5 +1,5 @@
 <nav class="products-nav">
-  <a class="products-nav-link text-black fz-32 py-6 <%= active=='optical'&&'active' %>" href="/week3-4/pages/products/optical.html">optical</a>
-  <a class="products-nav-link text-black fz-32 py-6 <%= active=='sunglasses'&&'active' %>" href="/week3-4/pages/products/sunglasses.html">sunglasses</a>
-  <a class="products-nav-link text-black fz-32 py-6" href="#">functional</a>
+  <a class="products-nav-link font-roboto text-black fz-32 py-6 <%= active=='optical'&&'active' %>" href="/week3-4/pages/products/optical.html">optical</a>
+  <a class="products-nav-link font-roboto text-black fz-32 py-6 <%= active=='sunglasses'&&'active' %>" href="/week3-4/pages/products/sunglasses.html">sunglasses</a>
+  <a class="products-nav-link font-roboto text-black fz-32 py-6" href="#">functional</a>
 </nav>
