--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -21,11 +21,11 @@
       </a>
       <a class="text-white contact-link" href="mailto:glasses@business.com">
         <span class="material-icons-outlined fz-36 mr-2">email</span>
-        <span>glasses@business.com</span>
+        <span class="font-roboto">glasses@business.com</span>
       </a>
     </address>
     <div class="footer-footer text-white fz-14">
-      <p>Copyright © 2020 Glasses.All rights reserved.</p>
+      <p class="font-roboto">Copyright © 2020 Glasses.All rights reserved.</p>
       <div class="policy-group">
         <a href="#" class="text-white mr-12">隱私權政策</a>
         <a href="#" class="text-white">服務條款</a>
