切版 RWD(tablet 992px) /article

--- a/assets/scss/pages/_article.scss
+++ b/assets/scss/pages/_article.scss
@@ -1,4 +1,9 @@
 .article-wrap {
+  .article-nav-container {
+    @include tablet {
+      margin-bottom: 8px;
+    }
+  }
   .breadcrumb-section {
     display: flex;
     a {
@@ -30,19 +35,50 @@
   }
   .article-main {
     display: flex;
+    flex-wrap: wrap;
+    @include tablet {
+      margin-right: 0;
+      .article-subtitle {
+        margin-bottom: 24px;
+      }
+      .article-content {
+        img {
+          margin-bottom: 16px;
+        }
+        p {
+          margin-bottom: 24px;
+        }
+      }
+    }
   }
   .article-container {
     width: 66.049%;
+    margin-right: 24px;
+    @include tablet {
+      width: 74.137%;
+    }
   }
   .tags-sidebar {
     width: 32.098%;
+    @include tablet {
+      width: 22.413%;
+      a, h3 {
+        font-size: 16px;
+      }
+    }
   }
   .aside-tags-list {
     display: flex;
     flex-wrap: wrap;
     .aside-tag-item {
+      @include tablet {
+        margin-right: 16px;
+      }
       &:nth-child(2n) {
         width: 50%;
+        @include tablet {
+          width: inherit;
+        }
       }
       &:hover {
         filter: brightness(1.3);
@@ -56,9 +92,17 @@
     display: flex;
     align-items: center;
     text-transform: uppercase;
+    @include tablet {
+      .icon {
+        margin-right: 0;
+      }
+    }
   }
   .article-footer {
     width: 66.049%;
+    @include tablet {
+      width: 100%;
+    }
     .share-group {
       display: flex;
       border-bottom: 1px solid $gray_300;
