切版 RWD(phone 767px) component: header, footer

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -103,6 +103,9 @@ $spacing-sizes: (
   @include tablet {
     padding: 0 36px
   }
+  @include phone {
+    padding: 0 12px
+  }
 }
 
 .font-roboto {
