--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,6 +1,6 @@
 <header class="header bg-primary py-4">
   <div class="header-container container">
-    <a href="/week3-4/pages/index.html">
+    <a class="logo-link" href="/week3-4/pages/index.html">
       <img class="logo" src="../../assets/images/logo-white.png" alt="logo">
     </a>
     <nav class="header-nav">
