--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -47,6 +47,9 @@
           width: calc(50% - 24px);
         }
       }
+      @include phone {
+        margin-right: 0;
+      }
     }
   }
 }
@@ -129,6 +132,9 @@
     justify-content: space-between;
     flex-wrap: wrap;
     margin: 0 -24px -24px 0;
+    @include phone {
+      margin-right: 0;
+    }
     .recommended-item {
       display: flex;
       flex-direction: column;
@@ -170,6 +176,9 @@
       .contact-text {
         font-size: 16px;
       }
+    }
+    @include phone {
+      width: 100%;
     }
     .input-group {
       label {
