--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,31 +1,33 @@
 <footer class="footer bg-primary pt-12 pb-8">
-  <div class="container">
-    <div class="footer-header mb-6">
-      <nav class="footer-nav">
-        <a href="/week3-4/pages/index.html" class="text-white mr-12">首頁</a>
-        <a href="/week3-4/pages/products/optical.html" class="text-white mr-12">系列鏡框</a>
-        <a href="/week3-4/pages/locations.html" class="text-white mr-12">門市據點</a>
-        <a href="/week3-4/pages/blog.html" class="text-white mr-12">部落格</a>
-        <a href="/week3-4/pages/questions.html" class="text-white">常見問題</a>
-      </nav>
-      <ul class="icons-list">
-        <li class="icon-item mr-8"><a href="#"><img class="icon" src="../../assets/images/ic-social-fb.png" alt="facebook"></a></li>
-        <li class="icon-item mr-8"><a href="#"><img class="icon" src="../../assets/images/ic_social_ig.png" alt="instagram"></a></li>
-        <li class="icon-item"><a href="#"><img class="icon" src="../../assets/images/ic_social_line.png" alt="line"></a></li>
-      </ul>
+  <div class="footer-container container">
+    <div class="footer-header pb-8 mb-8">
+      <div class="footer-nav-container mb-6">
+        <nav class="footer-nav">
+          <a href="/week3-4/pages/index.html" class="text-white mr-12">首頁</a>
+          <a href="/week3-4/pages/products/optical.html" class="text-white mr-12">系列鏡框</a>
+          <a href="/week3-4/pages/locations.html" class="text-white mr-12">門市據點</a>
+          <a href="/week3-4/pages/blog.html" class="text-white mr-12">部落格</a>
+          <a href="/week3-4/pages/questions.html" class="text-white">常見問題</a>
+        </nav>
+        <ul class="icons-list">
+          <li class="icon-item mr-8"><a href="#"><img class="icon" src="../../assets/images/ic-social-fb.png" alt="facebook"></a></li>
+          <li class="icon-item mr-8"><a href="#"><img class="icon" src="../../assets/images/ic_social_ig.png" alt="instagram"></a></li>
+          <li class="icon-item"><a href="#"><img class="icon" src="../../assets/images/ic_social_line.png" alt="line"></a></li>
+        </ul>
+      </div>
+      <address class="footer-main fz-36">
+        <a class="text-white contact-link mb-2" href="tel:+0800-000-00">
+          <span class="material-icons-outlined contact-icon fz-36 mr-2">call</span>
+          <span>0800-000-00</span>
+        </a>
+        <a class="text-white contact-link" href="mailto:glasses@business.com">
+          <span class="material-icons-outlined contact-icon fz-36 mr-2">email</span>
+          <span class="font-roboto">glasses@business.com</span>
+        </a>
+      </address>
     </div>
-    <address class="footer-main fz-36 pb-8 mb-8">
-      <a class="text-white contact-link mb-2" href="tel:+0800-000-00">
-        <span class="material-icons-outlined fz-36 mr-2">call</span>
-        <span>0800-000-00</span>
-      </a>
-      <a class="text-white contact-link" href="mailto:glasses@business.com">
-        <span class="material-icons-outlined fz-36 mr-2">email</span>
-        <span class="font-roboto">glasses@business.com</span>
-      </a>
-    </address>
     <div class="footer-footer text-white fz-14">
-      <p class="font-roboto">Copyright © 2020 Glasses.All rights reserved.</p>
+      <p class="copy-right-text font-roboto">Copyright © 2020 Glasses.All rights reserved.</p>
       <div class="policy-group">
         <a href="#" class="text-white mr-12">隱私權政策</a>
         <a href="#" class="text-white">服務條款</a>
