--- a/assets/scss/components/_products-list.scss
+++ b/assets/scss/components/_products-list.scss
@@ -2,9 +2,6 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0 -24px -80px 0;
-  @include tablet {
-    margin: 0 -24px -40px 0;
-  }
   .product-item {
     margin-right: 24px;
   }
@@ -16,14 +13,6 @@
   &.four-per-row {
     .product-item {
       width: calc(25% - 24px);
-    }
-  }
-  &.three-per-row, &.four-per-row {
-    .product-item {
-      @include tablet {
-        width: calc(50% - 24px);
-        margin-bottom: 40px;
-      }
     }
   }
   .product-item-img {
@@ -40,6 +29,24 @@
       width: 24px;
       height: 24px;
       border-radius: 4px;
+    }
+  }
+  @include tablet {
+    margin: 0 -24px -40px 0;
+    &.three-per-row, &.four-per-row {
+      .product-item {
+        width: calc(50% - 24px);
+        margin-bottom: 40px;
+      }
+    }
+  }
+  @include phone {
+    margin: 0 0 -24px 0;
+    &.three-per-row, &.four-per-row {
+      .product-item {
+        width: 100%;
+        margin: 0 0 24px;
+      }
     }
   }
 }
