--- a/assets/scss/pages/_sunglasses.scss
+++ b/assets/scss/pages/_sunglasses.scss
@@ -6,4 +6,23 @@
     display: flex;
     justify-content: center;
   }
+  .imgs-section-tablet {
+    display: none;
+  }
+  @include tablet {
+    .imgs-section-tablet {
+      display: block;
+    }
+    .imgs-section-pc {
+      display: none;
+    }
+  }
+  @include phone {
+    .title, .subtitle {
+      font-size: 24px;
+    }
+    .imgs-section {
+      margin-bottom: 40px;
+    }
+  }
 }
