切版 RWD(phone 767px) /locations, /location

--- a/assets/scss/components/_select-group.scss
+++ b/assets/scss/components/_select-group.scss
@@ -4,4 +4,10 @@
   select {
     flex-grow: 1;
   }
+  @include phone {
+    width: inherit;
+    .select-group-title {
+      font-size: 16px;
+    }
+  }
 }
