--- a/components/select-group.ejs
+++ b/components/select-group.ejs
@@ -1,5 +1,5 @@
 <div class="select-group">
-  <h3 class="fz-24 mr-4"><%= title  %></h3>
+  <h3 class="select-group-title fz-24 mr-4"><%= title  %></h3>
   <select name="<%= title %>" class="fz-18 text-gray_500 px-3 py-6px">
     <% options.map(option => { %>
       <option value="<%= option %>"><%= option %></option>
