--- a/assets/scss/components/_locations-list.scss
+++ b/assets/scss/components/_locations-list.scss
@@ -2,15 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0 -24px -48px 0;
-  @include tablet {
-    margin: 0 -24px -24px 0;
-  }
   .location-item {
     width: calc(33.333% - 24px);
-    @include tablet {
-      width: calc(50% - 24px);
-      margin-bottom: 24px;
-    }
     .location-item-img {
       width: 100%;
       height: 224px;
@@ -29,6 +22,20 @@
       display: block;
       width: 100%;
       text-align: center;
+    }
+  }
+  @include tablet {
+    margin: 0 -24px -24px 0;
+    .location-item {
+      width: calc(50% - 24px);
+      margin-bottom: 24px;
+    }
+  }
+  @include phone {
+    margin: 0 0 -24px;
+    .location-item {
+      width: 100%;
+      margin: 0 0 24px;
     }
   }
 }
